# world-cup-recap-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: hourly-worldcup-recap.yml
src/worldcup_recap/: __init__.py  ai.py  analytics.py  cli.py  config.py  database.py  logging_utils.py  models.py  parser.py  report.py  text_utils.py  wiki_client.py
tests/: test_analytics.py  test_parser.py  test_wiki_client.py
